# encryption

./: CMakeLists.txt  CustomDevice.cpp  CustomDevice.h  EncryptedFile.cpp  EncryptedFile.h  EncryptionDevice.cpp  EncryptionDevice.h  main.cpp
cmake/modules/: FindLibTomCrypt.cmake
